--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.2",
+    "@angular/animations": "^6.0.5",
     "@angular/common": "^6.0.2",
     "@angular/compiler": "^6.0.2",
     "@angular/core": "^6.0.2",
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
+    "@charlyghislain/plancul-ws-api": "0.0.1",
     "core-js": "^2.5.4",
+    "primeicons": "^1.0.0-beta.8",
+    "primeng": "^6.0.0-rc.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
