--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment-es6": "^1.0.0",
     "primeicons": "^1.0.0-beta.8",
     "primeng": "^6.0.0-rc.1",
+    "quill": "^1.3.6",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
