--- a/angular.json
+++ b/angular.json
@@ -33,10 +33,12 @@
               "node_modules/quill/dist/quill.core.css",
               "node_modules/primeng/resources/themes/omega/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/font-awesome/css/font-awesome.css"
+              "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/vis/dist/vis.css"
             ],
             "scripts": [
-              "node_modules/quill/dist/quill.js"
+              "node_modules/quill/dist/quill.js",
+              "node_modules/vis/dist/vis.js"
             ]
           },
           "configurations": {
