--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
     "@charlyghislain/plancul-ws-api": "0.0.1",
+    "@types/vis": "^4.21.5",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "moment-es6": "^1.0.0",
@@ -28,6 +29,7 @@
     "primeng": "^6.0.0-rc.1",
     "quill": "^1.3.6",
     "rxjs": "^6.0.0",
+    "vis": "^4.21.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
