--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start.fr": "ng serve -c fr",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -26,8 +27,8 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "moment-es6": "^1.0.0",
-    "primeicons": "^1.0.0-beta.8",
-    "primeng": "^6.0.0-rc.1",
+    "primeicons": "^1.0.0",
+    "primeng": "^7.0.0-beta.1",
     "quill": "^1.3.6",
     "rxjs": "^6.3.3",
     "vis": "^4.21.0",
