--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@angular/platform-browser": "^7.0.4",
     "@angular/platform-browser-dynamic": "^7.0.4",
     "@angular/router": "^7.0.4",
-    "@charlyghislain/astronomy-api": "file:../back/astronomy-api/target/npm",
     "@charlyghislain/authenticator-api": "^1.0.0",
-    "@charlyghislain/plancul-api": "file:../back/plancul-api/target/npm",
+    "@charlyghislain/astronomy-api": "^1.0.0-SNAPSHOT",
+    "@charlyghislain/plancul-api": "^1.0.0-SNAPSHOT",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@types/vis": "^4.21.5",
