--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "font-awesome": "^4.7.0",
     "moment-es6": "^1.0.0",
     "primeicons": "^1.0.0",
-    "primeng": "^7.0.0-beta.1",
+    "primeng": "^7.0.0-",
     "quill": "^1.3.6",
     "rxjs": "^6.3.3",
     "vis": "^4.21.0",
