--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "extract-i18n": "ng xi18n --output-path locale/base --i18n-locale en && xliffmerge --profile xliffmerge.json en fr"
   },
   "private": true,
   "dependencies": {
@@ -38,10 +39,9 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^7.0.4",
     "@angular-devkit/build-angular": "~0.6.3",
-    "typescript": "~3.1.6",
     "@angular/cli": "~7.0.6",
+    "@angular/compiler-cli": "^7.0.4",
     "@angular/language-service": "^7.0.4",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -55,8 +55,10 @@
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ngx-i18nsupport": "^0.17.1",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~3.1.6"
   }
 }
