--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "extract-i18n": "ng xi18n --output-path locale/base --i18n-locale en && xliffmerge --profile xliffmerge.json en fr"
+    "extract-i18n": "ng xi18n --output-path locale --i18n-locale en && xliffmerge --profile xliffmerge.json en fr"
   },
   "private": true,
   "dependencies": {
