Jenkinsfile: release to github, add docker image fetching from github release

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,13 +1,12 @@
-FROM httpd:2.4-alpine
+FROM httpd:2.4.35-alpine
 
-RUN apk update && apk add bash curl
+RUN apk update && apk add bash curl jq
 
-ADD https://github.com/cghislai/authenticator-admin-front/releases/download/1.0.2-rc.1/authenticator-admin-front-1.0.2-rc.1.tgz \
-    /opt/deployment/authenticator-admin-front.tgz
-ADD entrypoint.sh /opt/entrypoint.sh
-ADD httpd.conf /usr/local/apache2/conf/httpd.conf
-
-
+ADD https://github.com/cghislai/plancul-front/releases/download/v1.0.0-alpha.1/plancul-front-en-1.0.0-alpha.1.tgz \
+    /opt/deployment/plancul-front.tgz
+COPY scripts/* /opt/
+COPY conf/httpd.conf /usr/local/apache2/conf/httpd.conf
+COPY conf/ssl.conf /usr/local/apache2/conf/extra/httpd-ssl.conf
 
 ENTRYPOINT ["/opt/entrypoint.sh"]
 CMD ["httpd-foreground"]
