--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "@angular/platform-browser": "^7.2.3",
     "@angular/platform-browser-dynamic": "^7.2.3",
     "@angular/router": "^7.2.3",
-    "@charlyghislain/astronomy-api": "^1.0.5",
-    "@charlyghislain/authenticator-api": "^1.0.4",
-    "@charlyghislain/plancul-api": "file:../plancul-back/plancul-api/target/npm",
+    "@charlyghislain/astronomy-api": "^1.0.6",
+    "@charlyghislain/authenticator-api": "^1.0.6",
+    "@charlyghislain/plancul-api": "1.0.6",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@types/vis": "^4.21.10",
